created js file to control application. section in page added for memes

--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
         <label for="bottomText">Bottom Text</label><input type="text" id="bottomText">
       </p>
     </form>
+
+    <section></section>
+    
+    <script src="app.js"></script>
   </body>
 </html>
