added styling page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="app.css">
     <title>Meme Generator</title>
   </head>
 
@@ -21,8 +22,14 @@
       </p>
     </form>
 
-    <section></section>
-    
+    <section>
+      <div class="container">
+        <img src="https://makeameme.org/media/templates/250/kermit-drinking-tea.jpg" alt="kermitMeme">
+        <h1 class="top-text">TOP TEXT</h1>
+        <h1 class="bottom-text">BOTTOM TEXT</h1>
+      </div>
+    </section>
+
     <script src="app.js"></script>
   </body>
 </html>
