fixed positioning of the text on the meme image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
 
   <body>
-    <h1>Meme Generator!</h1>
+    <div class="meme-form">
+      <h1>Meme Generator!</h1>
     <form action="">
       <p>
         <label for="imgLink">Image Link</label><input type="text" id="imgLink">
@@ -21,11 +22,13 @@
         <label for="bottomText">Bottom Text</label><input type="text" id="bottomText">
       </p>
     </form>
+    </div>
+    
 
     <section>
       <div class="container">
         <img src="https://makeameme.org/media/templates/250/kermit-drinking-tea.jpg" alt="kermitMeme">
-        <h1 class="top-text">TOP TEXT</h1>
+        <h1 class="top-text">DONT MIND ME </h1>
         <h1 class="bottom-text">BOTTOM TEXT</h1>
       </div>
     </section>
