meme generation attempt. Not detecting iinput text when submitted

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <p>
         <label for="bottomText">Bottom Text</label><input type="text" id="bottomText">
       </p>
+      <input type="submit" value="Create Meme!">
     </form>
     </div>
     
