able to create memes and add them to section. iadded border around text. :

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <label for="topText">Top Text</label><input type="text" id="topText">
       </p>
       <p>
-        <label for="bottomText">Bottom Text</label><input type="text" id="bottomText">
+        <label for="bottomText">Bottom Text</label><input type="text" id="botText">
       </p>
       <input type="submit" value="Create Meme!">
     </form>
