removed sample meme on start page

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     
 
     <section>
-      <div class="container">
+      <!-- <div class="container">
         <img src="https://makeameme.org/media/templates/250/kermit-drinking-tea.jpg" alt="kermitMeme">
         <h1 class="top-text">DONT MIND ME </h1>
         <h1 class="bottom-text">BOTTOM TEXT</h1>
-      </div>
+      </div> -->
     </section>
 
     <script src="app.js"></script>
